lib/core/api/Ximu3.h

typedef enum XIMU3_ConnectionType
{
    XIMU3_ConnectionTypeUsb,
    XIMU3_ConnectionTypeSerial,
    XIMU3_ConnectionTypeTcp,
    XIMU3_ConnectionTypeUdp,
    XIMU3_ConnectionTypeBluetooth,
    XIMU3_ConnectionTypeFile,
} XIMU3_ConnectionType;
typedef enum XIMU3_DecodeError
{
    XIMU3_DecodeErrorBufferOverrun,
    XIMU3_DecodeErrorInvalidMessageIdentifier,
    XIMU3_DecodeErrorInvalidUtf8,
    XIMU3_DecodeErrorInvalidJson,
    XIMU3_DecodeErrorJsonIsNotAnObject,
    XIMU3_DecodeErrorJsonObjectIsNotASingleKeyValuePair,
    XIMU3_DecodeErrorInvalidEscapeSequence,
    XIMU3_DecodeErrorInvalidBinaryMessageLength,
    XIMU3_DecodeErrorUnableToParseAsciiMessage,
} XIMU3_DecodeError;
typedef enum XIMU3_Result
{
    XIMU3_ResultOk,
    XIMU3_ResultError,
} XIMU3_Result;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_CharArrays
{
    char (*array)[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t length;
    uint32_t capacity;
} XIMU3_CharArrays;
typedef struct XIMU3_UsbConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_UsbConnectionInfo;
typedef struct XIMU3_SerialConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t baud_rate;
    bool rts_cts_enabled;
} XIMU3_SerialConnectionInfo;
typedef struct XIMU3_TcpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t port;
} XIMU3_TcpConnectionInfo;
typedef struct XIMU3_UdpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t send_port;
    uint16_t receive_port;
} XIMU3_UdpConnectionInfo;
typedef struct XIMU3_BluetoothConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_BluetoothConnectionInfo;
typedef struct XIMU3_FileConnectionInfo
{
    char file_path[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_FileConnectionInfo;
typedef void (*XIMU3_CallbackResult)(enum XIMU3_Result data, void *context);
typedef struct XIMU3_PingResponse
{
    enum XIMU3_Result result;
    char interface[XIMU3_CHAR_ARRAY_SIZE];
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_PingResponse;
typedef void (*XIMU3_CallbackCharArrays)(struct XIMU3_CharArrays data, void *context);
typedef struct XIMU3_Statistics
{
    uint64_t timestamp;
    uint64_t data_total;
    uint32_t data_rate;
    uint64_t message_total;
    uint32_t message_rate;
    uint64_t error_total;
    uint32_t error_rate;
} XIMU3_Statistics;
typedef void (*XIMU3_CallbackDecodeError)(enum XIMU3_DecodeError data, void *context);
typedef void (*XIMU3_CallbackStatistics)(struct XIMU3_Statistics data, void *context);
typedef struct XIMU3_InertialMessage
{
    uint64_t timestamp;
    float gyroscope_x;
    float gyroscope_y;
    float gyroscope_z;
    float accelerometer_x;
    float accelerometer_y;
    float accelerometer_z;
} XIMU3_InertialMessage;
typedef void (*XIMU3_CallbackInertialMessage)(struct XIMU3_InertialMessage data, void *context);
typedef struct XIMU3_MagnetometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_MagnetometerMessage;
typedef void (*XIMU3_CallbackMagnetometerMessage)(struct XIMU3_MagnetometerMessage data, void *context);
enum XIMU3_Result XIMU3_connection_open(struct XIMU3_Connection *connection);
void XIMU3_connection_open_async(struct XIMU3_Connection *connection, XIMU3_CallbackResult callback, void *context);
void XIMU3_connection_close(struct XIMU3_Connection *connection);
struct XIMU3_PingResponse XIMU3_connection_ping(struct XIMU3_Connection *connection);
struct XIMU3_CharArrays XIMU3_connection_send_commands(struct XIMU3_Connection *connection, const char *const *commands, uint32_t length, uint32_t retries, uint32_t timeout);
void XIMU3_connection_send_commands_async(struct XIMU3_Connection *connection, const char *const *commands, uint32_t length, uint32_t retries, uint32_t timeout, XIMU3_CallbackCharArrays callback, void *context);
enum XIMU3_ConnectionType XIMU3_connection_get_type(struct XIMU3_Connection *connection);
struct XIMU3_UsbConnectionInfo XIMU3_connection_get_info_usb(struct XIMU3_Connection *connection);
struct XIMU3_SerialConnectionInfo XIMU3_connection_get_info_serial(struct XIMU3_Connection *connection);
struct XIMU3_TcpConnectionInfo XIMU3_connection_get_info_tcp(struct XIMU3_Connection *connection);
struct XIMU3_UdpConnectionInfo XIMU3_connection_get_info_udp(struct XIMU3_Connection *connection);
struct XIMU3_BluetoothConnectionInfo XIMU3_connection_get_info_bluetooth(struct XIMU3_Connection *connection);
struct XIMU3_FileConnectionInfo XIMU3_connection_get_info_file(struct XIMU3_Connection *connection);
struct XIMU3_Statistics XIMU3_connection_get_statistics(struct XIMU3_Connection *connection);
uint64_t XIMU3_connection_add_decode_error_callback(struct XIMU3_Connection *connection, XIMU3_CallbackDecodeError callback, void *context);
uint64_t XIMU3_connection_add_statistics_callback(struct XIMU3_Connection *connection, XIMU3_CallbackStatistics callback, void *context);
uint64_t XIMU3_connection_add_inertial_callback(struct XIMU3_Connection *connection, XIMU3_CallbackInertialMessage callback, void *context);
uint64_t XIMU3_connection_add_magnetometer_callback(struct XIMU3_Connection *connection, XIMU3_CallbackMagnetometerMessage callback, void *context);
uint64_t XIMU3_connection_add_end_of_file_callback(struct XIMU3_Connection *connection, void (*callback)(void *context), void *context);