lib/core/api/ximu3_bindings.g.dart


  int XIMU3_connection_open(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_open(
      connection,
    );
  }

  late final _XIMU3_connection_openPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_open');
  late final _XIMU3_connection_open = _XIMU3_connection_openPtr.asFunction<
      int Function(ffi.Pointer<XIMU3_Connection>)>();

  void XIMU3_connection_open_async(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackResult callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_open_async(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_open_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XIMU3_Connection>, XIMU3_CallbackResult,
              ffi.Pointer<ffi.Void>)>>('XIMU3_connection_open_async');
  late final _XIMU3_connection_open_async =
      _XIMU3_connection_open_asyncPtr.asFunction<
          void Function(ffi.Pointer<XIMU3_Connection>, XIMU3_CallbackResult,
              ffi.Pointer<ffi.Void>)>();

  void XIMU3_connection_close(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_close(
      connection,
    );
  }

  late final _XIMU3_connection_closePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_close');
  late final _XIMU3_connection_close = _XIMU3_connection_closePtr.asFunction<
      void Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_PingResponse XIMU3_connection_ping(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_ping(
      connection,
    );
  }

  late final _XIMU3_connection_pingPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_PingResponse Function(
              ffi.Pointer<XIMU3_Connection>)>>('XIMU3_connection_ping');
  late final _XIMU3_connection_ping = _XIMU3_connection_pingPtr.asFunction<
      XIMU3_PingResponse Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_CharArrays XIMU3_connection_send_commands(
    ffi.Pointer<XIMU3_Connection> connection,
    ffi.Pointer<ffi.Pointer<ffi.Char>> commands,
    int length,
    int retries,
    int timeout,
  ) {
    return _XIMU3_connection_send_commands(
      connection,
      commands,
      length,
      retries,
      timeout,
    );
  }

  late final _XIMU3_connection_send_commandsPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_CharArrays Function(
              ffi.Pointer<XIMU3_Connection>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32)>>('XIMU3_connection_send_commands');
  late final _XIMU3_connection_send_commands =
      _XIMU3_connection_send_commandsPtr.asFunction<
          XIMU3_CharArrays Function(ffi.Pointer<XIMU3_Connection>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, int, int, int)>();

  void XIMU3_connection_send_commands_async(
    ffi.Pointer<XIMU3_Connection> connection,
    ffi.Pointer<ffi.Pointer<ffi.Char>> commands,
    int length,
    int retries,
    int timeout,
    XIMU3_CallbackCharArrays callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_send_commands_async(
      connection,
      commands,
      length,
      retries,
      timeout,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_send_commands_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<XIMU3_Connection>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              XIMU3_CallbackCharArrays,
              ffi.Pointer<ffi.Void>)>>('XIMU3_connection_send_commands_async');
  late final _XIMU3_connection_send_commands_async =
      _XIMU3_connection_send_commands_asyncPtr.asFunction<
          void Function(
              ffi.Pointer<XIMU3_Connection>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              int,
              int,
              XIMU3_CallbackCharArrays,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_get_type(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_type(
      connection,
    );
  }

  late final _XIMU3_connection_get_typePtr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_get_type');
  late final _XIMU3_connection_get_type = _XIMU3_connection_get_typePtr
      .asFunction<int Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_UsbConnectionInfo XIMU3_connection_get_info_usb(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_usb(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_usbPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_UsbConnectionInfo Function(
              ffi.Pointer<XIMU3_Connection>)>>('XIMU3_connection_get_info_usb');
  late final _XIMU3_connection_get_info_usb =
      _XIMU3_connection_get_info_usbPtr.asFunction<
          XIMU3_UsbConnectionInfo Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_SerialConnectionInfo XIMU3_connection_get_info_serial(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_serial(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_serialPtr = _lookup<
          ffi.NativeFunction<
              XIMU3_SerialConnectionInfo Function(
                  ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_get_info_serial');
  late final _XIMU3_connection_get_info_serial =
      _XIMU3_connection_get_info_serialPtr.asFunction<
          XIMU3_SerialConnectionInfo Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_TcpConnectionInfo XIMU3_connection_get_info_tcp(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_tcp(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_tcpPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_TcpConnectionInfo Function(
              ffi.Pointer<XIMU3_Connection>)>>('XIMU3_connection_get_info_tcp');
  late final _XIMU3_connection_get_info_tcp =
      _XIMU3_connection_get_info_tcpPtr.asFunction<
          XIMU3_TcpConnectionInfo Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_UdpConnectionInfo XIMU3_connection_get_info_udp(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_udp(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_udpPtr = _lookup<
      ffi.NativeFunction<
          XIMU3_UdpConnectionInfo Function(
              ffi.Pointer<XIMU3_Connection>)>>('XIMU3_connection_get_info_udp');
  late final _XIMU3_connection_get_info_udp =
      _XIMU3_connection_get_info_udpPtr.asFunction<
          XIMU3_UdpConnectionInfo Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_BluetoothConnectionInfo XIMU3_connection_get_info_bluetooth(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_bluetooth(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_bluetoothPtr = _lookup<
          ffi.NativeFunction<
              XIMU3_BluetoothConnectionInfo Function(
                  ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_get_info_bluetooth');
  late final _XIMU3_connection_get_info_bluetooth =
      _XIMU3_connection_get_info_bluetoothPtr.asFunction<
          XIMU3_BluetoothConnectionInfo Function(
              ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_FileConnectionInfo XIMU3_connection_get_info_file(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_info_file(
      connection,
    );
  }

  late final _XIMU3_connection_get_info_filePtr = _lookup<
          ffi.NativeFunction<
              XIMU3_FileConnectionInfo Function(
                  ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_get_info_file');
  late final _XIMU3_connection_get_info_file =
      _XIMU3_connection_get_info_filePtr.asFunction<
          XIMU3_FileConnectionInfo Function(ffi.Pointer<XIMU3_Connection>)>();

  XIMU3_Statistics XIMU3_connection_get_statistics(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_get_statistics(
      connection,
    );
  }

  late final _XIMU3_connection_get_statisticsPtr = _lookup<
          ffi.NativeFunction<
              XIMU3_Statistics Function(ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_get_statistics');
  late final _XIMU3_connection_get_statistics =
      _XIMU3_connection_get_statisticsPtr.asFunction<
          XIMU3_Statistics Function(ffi.Pointer<XIMU3_Connection>)>();

  int XIMU3_connection_add_decode_error_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackDecodeError callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_decode_error_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_decode_error_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackDecodeError, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_decode_error_callback');
  late final _XIMU3_connection_add_decode_error_callback =
      _XIMU3_connection_add_decode_error_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>, XIMU3_CallbackDecodeError,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_statistics_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackStatistics callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_statistics_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_statistics_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackStatistics, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_statistics_callback');
  late final _XIMU3_connection_add_statistics_callback =
      _XIMU3_connection_add_statistics_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>, XIMU3_CallbackStatistics,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_inertial_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackInertialMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_inertial_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_inertial_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackInertialMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_inertial_callback');
  late final _XIMU3_connection_add_inertial_callback =
      _XIMU3_connection_add_inertial_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackInertialMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_magnetometer_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackMagnetometerMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_magnetometer_callback(
      connection,
      callback,
      context,
    );
  }
